<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPisoActivity">

    <EditText
        android:id="@+id/txtDireccionAddPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtNumeroAddPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spCiudadAddPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:entries="@array/ciudad" />

    <EditText
        android:id="@+id/txtProvinciaAddPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/provincia"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtCpAddPiso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/cp"
        android:inputType="textPostalAddress" />

    <RatingBar
        android:id="@+id/rtbValoracionAddPiso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:numStars="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCrearAddPiso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/crear" />

        <Button
            android:id="@+id/btnCancelarAddPiso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>